# arena-mcp-server

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
src/arena_mcp_server/: arena_client.py  auth.py  server.py
