[project]
name = "arena-mcp-server"
version = "0.1.0"
description = "MCP server for Arena PLM API"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.11.0",
    "httpx>=0.27.0",
]

[project.scripts]
arena-mcp-server = "arena_mcp_server.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
